--- a/index.html
+++ b/index.html
@@ -204,8 +204,8 @@
             <h3 class="heading-3 heading-3__gallery">Check out our hard workers</h3>
             <div class="tabs gallery__tabs">
                 <nav class="tabs__items">
-                    <button class="tabs__item" data-tab="#tab_01">Gallery</button>
-                    <button class="tabs__item active" data-tab="#tab_02">
+                    <button class="tabs__item active" data-tab="#tab_01">Gallery</button>
+                    <button class="tabs__item" data-tab="#tab_02">
                         Live stream: Yard 1
                         <span class="tabs__item_circle-green"></span>
                     </button>
